--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "gulp": "^3.9.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-tslint": "^3.2.0",
-    "gulp-typescript": "^2.8.2",
+    "gulp-typescript": "^2.10.0",
     "superstatic": "^1.2.3"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-beta.0",
+    "systemjs": "0.19.6",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "zone.js": "0.5.10"
   }
 }
