--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-    "version": "1.5.0",
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
@@ -9,5 +8,8 @@
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
