--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "dependencies": {
     "angular2": "2.0.0-beta.0",
     "angular2-jwt": "^0.1.6",
+    "cors": "^2.7.1",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "express": "^4.13.4",
+    "express-jwt": "^3.3.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.6",
