--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "@angular2-material/toolbar": "^2.0.0-alpha.2",
     "@angular2-material/input": "^2.0.0-alpha.2",
     "@angular2-material/card": "^2.0.0-alpha.2",
-    "angular2": "2.0.0-beta.9",
-    "angular2-jwt": "0.1.8",
+    "angular2": "2.0.0-beta.15",
+    "angular2-jwt": "0.1.9",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
-    "es6-shim": "^0.33.3",
+    "es6-shim": "^0.35.0",
     "express": "4.13.4",
     "express-jwt": "3.3.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.24",
-    "zone.js": "0.5.15"
+    "zone.js": "^0.6.10"
   }
 }
