--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
     "typings": "^0.8.1"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/http": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^2.0.0-rc.1",
-    "@angular2-material/button": "^2.0.0-alpha.4",
-    "@angular2-material/card": "^2.0.0-alpha.4",
-    "@angular2-material/checkbox": "^2.0.0-alpha.4",
-    "@angular2-material/core": "^2.0.0-alpha.4",
-    "@angular2-material/input": "^2.0.0-alpha.4",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.4",
-    "@angular2-material/toolbar": "^2.0.0-alpha.4",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular2-material/button": "2.0.0-alpha.4",
+    "@angular2-material/card": "2.0.0-alpha.4",
+    "@angular2-material/checkbox": "2.0.0-alpha.4",
+    "@angular2-material/core": "2.0.0-alpha.4",
+    "@angular2-material/input": "2.0.0-alpha.4",
+    "@angular2-material/progress-circle": "2.0.0-alpha.4",
+    "@angular2-material/toolbar": "2.0.0-alpha.4",
     "angular2-jwt": "^0.1.15",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
@@ -47,7 +47,7 @@
     "express": "4.13.4",
     "express-jwt": "3.3.0",
     "reflect-metadata": "0.1.3",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.6",
     "symbol-observable": "^0.2.4",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
