--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "typings": "^0.8.1"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular2-material/button": "2.0.0-alpha.4",
-    "@angular2-material/card": "2.0.0-alpha.4",
-    "@angular2-material/checkbox": "2.0.0-alpha.4",
-    "@angular2-material/core": "2.0.0-alpha.4",
-    "@angular2-material/input": "2.0.0-alpha.4",
-    "@angular2-material/progress-circle": "2.0.0-alpha.4",
-    "@angular2-material/toolbar": "2.0.0-alpha.4",
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/forms": "^0.1.0",
+    "@angular/http": "2.0.0-rc.3",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/router": "3.0.0-alpha.8",
+    "@angular2-material/button": "2.0.0-alpha.6",
+    "@angular2-material/card": "2.0.0-alpha.6",
+    "@angular2-material/checkbox": "2.0.0-alpha.6",
+    "@angular2-material/core": "2.0.0-alpha.6",
+    "@angular2-material/input": "2.0.0-alpha.6",
+    "@angular2-material/progress-circle": "2.0.0-alpha.6",
+    "@angular2-material/toolbar": "2.0.0-alpha.6",
     "angular2-jwt": "^0.1.15",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
