--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ng2_play",
   "version": "1.0.0",
-  "description": "- Blog @ http://www.towfeek.se/2015/07/angularjs-2-overview/\r - Screencast @ https://youtu.be/rd3cLh_wn04",
-  "main": "gulpfile.js",
+  "description": "- Blog @ http://www.towfeek.se/2015/07/angularjs-2-overview/\r - Screencast @ https://youtu.be/rd3cLh_wn04",  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "ng serve",
+    "postinstall": "typings install",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
+  },  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ajtowf/ng2_play.git"
@@ -17,13 +21,19 @@
   },
   "homepage": "https://github.com/ajtowf/ng2_play#readme",
   "devDependencies": {
-    "browser-sync": "^2.9.3",
-    "gulp": "^3.9.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-tslint": "^3.2.0",
-    "gulp-typescript": "^2.13.4",
-    "superstatic": "^1.2.3",
-    "typings": "^0.8.1"
+    "angular-cli": "1.0.0-beta.9",
+    "codelyzer": "0.0.20",
+    "ember-cli-inject-live-reload": "1.4.0",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-jasmine": "0.3.8",
+    "protractor": "3.3.0",
+    "ts-node": "0.5.5",
+    "tslint": "3.11.0",
+    "typescript": "1.8.10",
+    "typings": "0.8.1"
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.3",
