--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng2_play",
   "version": "1.0.0",
-  "description": "- Blog @ http://www.towfeek.se/2015/07/angularjs-2-overview/\r - Screencast @ https://youtu.be/rd3cLh_wn04",  
+  "description": "- Blog @ http://www.towfeek.se/2015/07/angularjs-2-overview/\r - Screencast @ https://youtu.be/rd3cLh_wn04",
   "scripts": {
     "start": "ng serve",
     "postinstall": "typings install",
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
-  },  
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ajtowf/ng2_play.git"
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/ajtowf/ng2_play#readme",
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.9",
+    "@angular/tsc-wrapped": "^0.2.2",
+    "angular-cli": "^1.0.0-beta.9",
     "codelyzer": "0.0.20",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
@@ -36,21 +37,21 @@
     "typings": "0.8.1"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.3",
-    "@angular/compiler": "2.0.0-rc.3",
-    "@angular/core": "2.0.0-rc.3",
-    "@angular/forms": "^0.1.0",
-    "@angular/http": "2.0.0-rc.3",
-    "@angular/platform-browser": "2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
-    "@angular/router": "3.0.0-alpha.8",
-    "@angular2-material/button": "2.0.0-alpha.6",
-    "@angular2-material/card": "2.0.0-alpha.6",
-    "@angular2-material/checkbox": "2.0.0-alpha.6",
-    "@angular2-material/core": "2.0.0-alpha.6",
-    "@angular2-material/input": "2.0.0-alpha.6",
-    "@angular2-material/progress-circle": "2.0.0-alpha.6",
-    "@angular2-material/toolbar": "2.0.0-alpha.6",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "^0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular2-material/button": "2.0.0-alpha.7",
+    "@angular2-material/card": "2.0.0-alpha.7",
+    "@angular2-material/checkbox": "2.0.0-alpha.7",
+    "@angular2-material/core": "2.0.0-alpha.7",
+    "@angular2-material/input": "2.0.0-alpha.7",
+    "@angular2-material/progress-circle": "2.0.0-alpha.7",
+    "@angular2-material/toolbar": "2.0.0-alpha.7",
     "angular2-jwt": "^0.1.15",
     "cors": "2.7.1",
     "es6-promise": "3.1.2",
