--- a/package.json
+++ b/package.json
@@ -1,67 +1,49 @@
 {
-  "name": "ng2_play",
-  "version": "1.0.0",
-  "description": "- Blog @ http://www.towfeek.se/2015/07/angularjs-2-overview/\r - Screencast @ https://youtu.be/rd3cLh_wn04",
+  "name": "ng2-play",
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
     "start": "ng serve",
-    "postinstall": "typings install",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ajtowf/ng2_play.git"
+  "private": true,
+  "dependencies": {
+    "@angular/common": "2.0.2",
+    "@angular/compiler": "2.0.2",
+    "@angular/core": "2.0.2",
+    "@angular/forms": "2.0.2",
+    "@angular/http": "2.0.2",
+    "@angular/material": "^2.0.0-alpha.9-3",
+    "@angular/platform-browser": "2.0.2",
+    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/router": "3.0.0",
+    "angular2-jwt": "^0.1.24",
+    "core-js": "^2.4.1",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
-  "author": "Ajden Towfeek",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ajtowf/ng2_play/issues"
-  },
-  "homepage": "https://github.com/ajtowf/ng2_play#readme",
   "devDependencies": {
-    "@angular/tsc-wrapped": "^0.2.2",
-    "angular-cli": "^1.0.0-beta.9",
-    "codelyzer": "0.0.20",
-    "ember-cli-inject-live-reload": "1.4.0",
+    "@types/jasmine": "^2.2.30",
+    "angular-cli": "1.0.0-beta.16",
+    "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "0.3.8",
-    "protractor": "3.3.0",
-    "ts-node": "0.5.5",
-    "tslint": "3.11.0",
-    "typescript": "1.8.10",
-    "typings": "0.8.1"
-  },
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "^0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular2-material/button": "2.0.0-alpha.7",
-    "@angular2-material/card": "2.0.0-alpha.7",
-    "@angular2-material/checkbox": "2.0.0-alpha.7",
-    "@angular2-material/core": "2.0.0-alpha.7",
-    "@angular2-material/input": "2.0.0-alpha.7",
-    "@angular2-material/progress-circle": "2.0.0-alpha.7",
-    "@angular2-material/toolbar": "2.0.0-alpha.7",
-    "angular2-jwt": "^0.1.15",
-    "cors": "2.7.1",
-    "es6-promise": "3.1.2",
-    "es6-shim": "^0.35.0",
-    "express": "4.13.4",
-    "express-jwt": "3.3.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "symbol-observable": "^0.2.4",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "2.0.2"
   }
 }
